set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/kernel.ld")
file(GLOB_RECURSE SOURCES "*.c" "*.S")
set(FLAGS -mcmodel=kernel -mno-red-zone -nostdlib -ffreestanding)
add_executable(kernel ${SOURCES})
set_target_properties(kernel PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
target_compile_options(kernel PRIVATE ${FLAGS})
target_link_options(kernel PRIVATE ${FLAGS} -lgcc -T${LINKER_SCRIPT} -z max-page-size=0x1000)
install(TARGETS kernel RUNTIME DESTINATION boot)
