set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/kernel.ld")
file(GLOB_RECURSE SOURCES "*.c" "*.cpp" "*.S")
add_executable(kernel ${SOURCES})
set_target_properties(kernel PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
target_compile_options(kernel PRIVATE ${FLAGS_KERNEL})
target_link_options(kernel PRIVATE ${FLAGS_KERNEL} -lgcc -T${LINKER_SCRIPT} -z max-page-size=0x1000)
target_link_libraries(kernel libc_kernel libboot_kernel)
install_image(TARGET kernel DESTINATION /boot INITRAM)
