set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/boot.ld")
file(GLOB_RECURSE SOURCES "*.S" "*.c" "*.h")
add_executable(bootloader ${SOURCES})
set_target_properties(bootloader PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
target_compile_options(bootloader PRIVATE ${FLAGS_BOOT})
target_link_options(bootloader PRIVATE ${FLAGS_BOOT} -lgcc -T${LINKER_SCRIPT})
target_link_libraries(bootloader libc_boot libboot_bootloader)
